Fixed problem with scrollbars due to changes from absolute to relative positioning.

--- a/kohese-portal/client/css/components/tree.css
+++ b/kohese-portal/client/css/components/tree.css
@@ -1,7 +1,7 @@
 .knowledge-tree {
   border-collapse: collapse;
   position: relative;
-  height: calc(100% - 40px);
+  height: calc(100% - $topActionBarHeight);
   width: calc(100% - 20px);
   margin: 0px 0px 0px 20px; }
   .knowledge-tree .kt-icon, .knowledge-tree .kt-label {
